fix about page on mobile display

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,5 +1,5 @@
 .about-container {
-  max-width: 100%;
+  max-width: 90%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -27,13 +27,14 @@
 
 .signature {
   display: flex;
-  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 
 .profile-image img {
+  width: 175px;
   opacity: 0.8;
   margin-top: 5%;
-  width: 200px;
   border-radius: 10px;
   border: 1px solid #f9ba30;
   transition: 0.5s;
